--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,13 +1,13 @@
 [preset.0]
 
-name="Windows Desktop"
+name="Deep Meditation"
 platform="Windows Desktop"
 runnable=true
 custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="Builds/Deep Meditation/Deep Meditation.exe"
 script_export_mode=1
 script_encryption_key=""
 
@@ -42,7 +42,7 @@ application/trademarks=""
 
 [preset.1]
 
-name="DeepMeditation"
+name="Deep Meditation"
 platform="HTML5"
 runnable=true
 custom_features=""
